Use cl-wavelets

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: common-lisp
 env:
   matrix:
     - LISP=sbcl
+    - LISP=allegro
+    - LISP=ccl
 
 install:
   - sudo apt-get install info install-info
@@ -16,6 +18,7 @@ install:
   - cl -l easy-audio -l fiveam -l flexi-streams -e '(ql-util:without-prompting (ql:add-to-init-file))'
 
 before-script:
+  - mkdir lisp && pushd lisp && git clone git://github.com/shamazmazum/cl-wavelets.git && popd
   - mkdir lisp && pushd lisp && git clone git://github.com/shamazmazum/trivial-bit-streams.git && popd
 
 script:
