--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
     else
       curl https://raw.githubusercontent.com/luismbo/cl-travis/master/install.sh | sh;
     fi
-  - cl -l easy-audio -l fiveam -l flexi-streams -e '(ql-util:without-prompting (ql:add-to-init-file))'
+  - cl -e '(ql-util:without-prompting (ql:add-to-init-file))'
 
 before-script:
   - mkdir lisp
