--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
   test_and_docs:
     runs-on: ubuntu-latest
     env:
-      LISP: sbcl
+      LISP: sbcl-bin
     steps:
       - name: Checkout
         uses: actions/checkout@v2
